# rust-axum

./: '  .gitignore  Cargo.toml
src/: main.rs
src/config/: app_state.rs
src/database/: mongo.rs
src/logger/: init_logger.rs  mod.rs
src/middlewares/: admin_middleware.rs  auth_middleware.rs  mod.rs
src/models/: auth_model.rs  cart_model.rs  mod.rs  products_model.rs  user_model.rs
src/routes/: app.rs  auth_route.rs  cart_route.rs  mod.rs  product_route.rs  user_route.rs
src/services/: auth_service.rs  cart_service.rs  mod.rs  product_service.rs  user_service.rs
src/utils/: bcrypt.rs  generate_otp.rs  jwt.rs  mod.rs  parse_id.rs  s3.rs  send_email.rs
