[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
mongodb = "3.2.1"
serde = {version = "1.0.217", features = ["derive"] }
tokio = {version = "1.43.0", features = ["full"]}
tower-http = {version = "0.6.2", features = ["add-extension", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
