[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-cookie = "0.2.0"
axum-macros = "0.5.0"
bcrypt = "0.17.0"
chrono = {version = "0.4.39", features = ["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lettre = {version = "0.11.12", features=["tokio1-native-tls"]}
maud = "0.27.0"
mongodb = "3.2.1"
rand = "0.9.0"
serde = {version = "1.0.217", features = ["derive"] }
tokio = {version = "1.43.0", features = ["full"]}
tower-http = {version = "0.6.2", features = ["add-extension", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
uuid = {version = "1.13.1", features = ["v4", "fast-rng"]}
